Fix T38895: Unstable behavior using VehicleWrapper after Bullet 2.82 update

The Bullet 2.82 update uses a different method for ray casting that
seems incompatible with our older files. So, for now we just force the
vehicle physics to use the older ray casting method.